re PR c++/28420 (ICE with "typeid" as template parameter)

PR c++/28420
        * parser.c (cp_parser_postfix_expression): Make sure that the
        saved value for parser->type_definition_forbidden_message is
        restored before returning to avoid an invalid free().

From-SVN: r116330